--- a/meiduo_mall/uwsgi/uwsgi-web01.ini
+++ b/meiduo_mall/uwsgi/uwsgi-web01.ini
@@ -15,6 +15,6 @@ master=True
 # 存放进程编号的文件
 pidfile=uwsgi1.pid
 # 日志文件
-daemonize=uwsgi1.log
+#daemonize=uwsgi1.log
 # 指定依赖的虚拟环境
-virtualenv=/root/.virtualenvs/django
+#virtualenv=/root/.virtualenvs/django
