--- a/meiduo_mall/uwsgi/uwsgi-web02.ini
+++ b/meiduo_mall/uwsgi/uwsgi-web02.ini
@@ -15,6 +15,6 @@ master=True
 # 存放进程编号的文件
 pidfile=uwsgi2.pid
 # 日志文件
-daemonize=uwsgi2.log
+#daemonize=uwsgi2.log
 # 指定依赖的虚拟环境
-virtualenv=/root/.virtualenvs/django
+#virtualenv=/root/.virtualenvs/django
